[gd_scene load_steps=18 format=2]

[ext_resource path="res://Levels/GenericLevel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Buttons/FadingLabel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Symbols/Integral.png" type="Texture" id=3]
[ext_resource path="res://Assets/Operators/plus.png" type="Texture" id=4]
[ext_resource path="res://Assets/Numbers/1.png" type="Texture" id=5]
[ext_resource path="res://Assets/square_missing.png" type="Texture" id=6]
[ext_resource path="res://Assets/Numbers/2.png" type="Texture" id=7]
[ext_resource path="res://Assets/Numbers/3.png" type="Texture" id=8]
[ext_resource path="res://Levels/Level10/Level10.gd" type="Script" id=9]
[ext_resource path="res://Assets/Symbols/d.png" type="Texture" id=10]
[ext_resource path="res://Assets/Operators/minus.png" type="Texture" id=11]
[ext_resource path="res://Buttons/ShrinkableButton.tscn" type="PackedScene" id=12]
[ext_resource path="res://Buttons/MovableButton.tscn" type="PackedScene" id=13]
[ext_resource path="res://Assets/Operators/equal.png" type="Texture" id=14]
[ext_resource path="res://Assets/Numbers/5.png" type="Texture" id=15]
[ext_resource path="res://Assets/Operators/Times.png" type="Texture" id=16]
[ext_resource path="res://Assets/Numbers/6.png" type="Texture" id=17]

[node name="Level10" instance=ExtResource( 1 )]
script = ExtResource( 9 )

[node name="TrueRect" parent="." index="0"]
margin_left = 60.2529
margin_top = 189.281
margin_right = 76.2529
margin_bottom = 205.281
rect_scale = Vector2( 40, 10 )

[node name="FadingLabel" parent="." index="5" instance=ExtResource( 2 )]
margin_left = 131.0
margin_top = 70.0
margin_right = 391.0
margin_bottom = 91.0
bbcode_enabled = false
bbcode_text = ""
text = "Time for the final test..."

[node name="FadingLabel2" parent="." index="6" instance=ExtResource( 2 )]
margin_left = 123.0
margin_top = 119.0
margin_right = 436.0
margin_bottom = 140.0
bbcode_enabled = false
bbcode_text = ""
text = "Haha, just jokin, here's the real one"

[node name="FadingLabel3" parent="." index="7" instance=ExtResource( 2 )]
margin_left = 115.0
margin_top = 406.0
margin_right = 459.0
margin_bottom = 427.0
bbcode_enabled = false
bbcode_text = ""
text = "Ehm... Yo weren't supposed to solve it"

[node name="FadingLabel4" parent="." index="8" instance=ExtResource( 2 )]
margin_left = 192.0
margin_top = 455.0
margin_right = 337.0
margin_bottom = 476.0
bbcode_enabled = false
bbcode_text = ""
text = "Hehe, congratz"

[node name="Control2" type="Control" parent="." index="9"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control2" index="0"]
margin_left = 135.723
margin_top = 239.698
margin_right = 151.723
margin_bottom = 255.698
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect3" type="TextureRect" parent="Control2" index="1"]
margin_left = 261.085
margin_top = 236.548
margin_right = 277.085
margin_bottom = 252.548
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="Control2" index="2"]
margin_left = 201.6
margin_top = 228.839
margin_right = 217.6
margin_bottom = 244.839
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )

[node name="TextureRect5" type="TextureRect" parent="Control2" index="3"]
margin_left = 373.039
margin_top = 239.698
margin_right = 389.039
margin_bottom = 255.698
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 15 )

[node name="TextureRect6" type="TextureRect" parent="Control2" index="4"]
margin_left = 438.916
margin_top = 238.904
margin_right = 454.916
margin_bottom = 254.904
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 16 )

[node name="TextureRect7" type="TextureRect" parent="Control2" index="5"]
margin_left = 491.3
margin_top = 236.523
margin_right = 507.3
margin_bottom = 252.523
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )

[node name="TextureRect4" type="TextureRect" parent="Control2" index="6"]
margin_left = 312.718
margin_top = 235.729
margin_right = 328.718
margin_bottom = 251.729
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 14 )

[node name="MovableButton" parent="Control2" index="7" instance=ExtResource( 13 )]
margin_left = 390.641
margin_top = 246.914
margin_right = 406.641
margin_bottom = 262.914
rect_scale = Vector2( 3, 1 )
text = ExtResource( 5 )

[node name="MovableButton2" parent="Control2" index="8" instance=ExtResource( 13 )]
margin_left = 200.672
margin_top = 254.732
margin_right = 216.672
margin_bottom = 270.732
rect_scale = Vector2( 3, 3 )
texture_normal = ExtResource( 11 )
text = ExtResource( 11 )

[node name="MovableButton3" parent="Control2" index="9" instance=ExtResource( 13 )]
margin_left = 476.071
margin_top = 236.068
margin_right = 492.071
margin_bottom = 252.068
rect_scale = Vector2( 3, 3 )
text = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="Control2" index="10"]
margin_left = 105.0
margin_top = 204.0
margin_right = 644.0
margin_bottom = 323.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="." index="10"]
margin_left = -94.0
margin_right = -54.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control" index="0"]
margin_left = 211.563
margin_top = 226.815
margin_right = 227.563
margin_bottom = 242.815
rect_scale = Vector2( 5, 5 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect10" type="TextureRect" parent="Control" index="1"]
margin_left = 444.901
margin_top = 230.148
margin_right = 460.901
margin_bottom = 246.148
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect18" type="TextureRect" parent="Control" index="2"]
margin_left = 444.06
margin_top = 230.148
margin_right = 460.06
margin_bottom = 246.148
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect19" type="TextureRect" parent="Control" index="3"]
margin_left = 698.851
margin_top = 214.171
margin_right = 714.851
margin_bottom = 230.171
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect15" type="TextureRect" parent="Control" index="4"]
margin_left = 598.785
margin_top = 235.194
margin_right = 614.785
margin_bottom = 251.194
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect4" type="TextureRect" parent="Control" index="5"]
margin_left = 351.654
margin_top = 233.971
margin_right = 367.654
margin_bottom = 249.971
rect_rotation = 44.9999
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect5" type="TextureRect" parent="Control" index="6"]
margin_left = 285.583
margin_top = 241.522
margin_right = 301.583
margin_bottom = 257.522
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect9" type="TextureRect" parent="Control" index="7"]
margin_left = 429.052
margin_top = 231.139
margin_right = 445.052
margin_bottom = 247.139
rect_rotation = 44.9999
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect17" type="TextureRect" parent="Control" index="8"]
margin_left = 684.684
margin_top = 210.117
margin_right = 700.684
margin_bottom = 226.117
rect_rotation = 44.9999
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect20" type="TextureRect" parent="Control" index="9"]
margin_left = 708.229
margin_top = 242.071
margin_right = 724.229
margin_bottom = 258.071
rect_rotation = 89.9999
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect21" type="TextureRect" parent="Control" index="10"]
margin_left = 658.616
margin_top = 279.911
margin_right = 674.616
margin_bottom = 295.911
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect14" type="TextureRect" parent="Control" index="11"]
margin_left = 582.936
margin_top = 233.662
margin_right = 598.936
margin_bottom = 249.662
rect_rotation = 44.9999
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect13" type="TextureRect" parent="Control" index="12"]
margin_left = 510.408
margin_top = 229.251
margin_right = 526.408
margin_bottom = 245.251
rect_rotation = 44.9999
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect12" type="TextureRect" parent="Control" index="13"]
margin_left = 453.592
margin_top = 235.858
margin_right = 469.592
margin_bottom = 251.858
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect8" type="TextureRect" parent="Control" index="14"]
margin_left = 366.618
margin_top = 239.929
margin_right = 382.618
margin_bottom = 255.929
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect16" type="TextureRect" parent="Control" index="15"]
margin_left = 614.263
margin_top = 244.553
margin_right = 630.263
margin_bottom = 260.553
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect22" type="TextureRect" parent="Control" index="16"]
margin_left = 523.0
margin_top = 242.0
margin_right = 539.0
margin_bottom = 258.0
rect_scale = Vector2( 3, 3 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MovableButton" parent="Control" index="17" instance=ExtResource( 13 )]
margin_left = 644.103
margin_top = 278.848
margin_right = 660.103
margin_bottom = 294.848
text = ExtResource( 5 )

[node name="MovableButton4" parent="Control" index="18" instance=ExtResource( 13 )]
margin_left = 438.613
margin_top = 246.264
margin_right = 454.613
margin_bottom = 262.264
rect_scale = Vector2( 3, 1 )
text = ExtResource( 5 )

[node name="MovableButton2" parent="Control" index="19" instance=ExtResource( 13 )]
margin_left = 450.549
margin_top = 220.587
margin_right = 466.549
margin_bottom = 236.587
texture_normal = ExtResource( 11 )
text = ExtResource( 11 )

[node name="MovableButton3" parent="Control" index="20" instance=ExtResource( 13 )]
margin_left = 366.875
margin_top = 251.865
margin_right = 382.875
margin_bottom = 267.865
texture_normal = ExtResource( 11 )
text = ExtResource( 11 )

[node name="ShrinkableButton" parent="Control" index="21" instance=ExtResource( 12 )]
margin_left = 693.841
margin_top = 213.011
margin_right = 709.841
margin_bottom = 229.011
rect_scale = Vector2( 1, 1 )
text = ExtResource( 5 )
current_size = 1

[node name="ColorRect" type="ColorRect" parent="Control" index="22"]
margin_left = 200.392
margin_top = 202.148
margin_right = 746.392
margin_bottom = 329.148
color = Color( 0, 0, 0, 1 )
